--- a/1 - Generating InputFile Combinations.ipynb
+++ b/1 - Generating InputFile Combinations.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 113,
    "id": "f46b581b",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,8 @@
     "        savedata.to_csv(ict, index=False)\n",
     "\n",
     "        \n",
-    "def save_TMY3(srrl15, savefile='Bifacial_TMYfileAll2019_15.csv', includeTrackerData=False):\n",
+    "def save_TMY3(datecol, timecol, windspeed, temp_amb, Albedo, POA=None, DHI=None, DNI=None, GHI=None, \n",
+    "                        savefile='TMY3.csv', trackerdata=None):\n",
     "    \"\"\"\n",
     "    NEW Routine to save TMY3 , assuming the columns Date and Time already exist and are in the right\n",
     "    1-24 hour format. (this can be done previous to submitting to this function by\n",
@@ -234,17 +235,17 @@
     "\n",
     "    header = \"724666, DENVER/CENTENNIAL [GOLDEN - NREL], CO, -7, 39.742,-105.179, 1829\\n\"\n",
     "\n",
-    "    savedata = pd.DataFrame({'Date (MM/DD/YYYY)':srrl15['Date (MM/DD/YYYY)'],\n",
-    "                             'Time (HH:MM)':srrl15['Time (HH:MM)'],\n",
-    "                             'Wspd (m/s)':srrl15['Avg Wind Speed @ 6ft [m/s]'],\n",
-    "                             'Dry-bulb (C)':srrl15['Tower Dry Bulb Temp [deg C]'],\n",
-    "                             'DHI (W/m^2)':srrl15['Diffuse 8-48 (vent) [W/m^2]'],\n",
-    "                             'DNI (W/m^2)':srrl15['Direct CHP1-1 [W/m^2]'],\n",
-    "                             'GHI (W/m^2)':srrl15['Global CMP22 (vent/cor) [W/m^2]'],\n",
-    "                             'Alb (unitless)':srrl15['Albedo (CMP11)']})\n",
+    "    savedata = pd.DataFrame({'Date (MM/DD/YYYY)':datecol,\n",
+    "                             'Time (HH:MM)':timecol,\n",
+    "                             'Wspd (m/s)':windspeed,\n",
+    "                             'Dry-bulb (C)':temp_amb,\n",
+    "                             'DHI (W/m^2)':DHI,\n",
+    "                             'DNI (W/m^2)':DNI,\n",
+    "                             'GHI (W/m^2)':GHI,\n",
+    "                             'Alb (unitless)':Albedo})\n",
     "\n",
-    "    if includeTrackerData:\n",
-    "        savedata['Tracker Angle (degrees)'] = srrl15['Tracker Angle (degrees)']\n",
+    "    if trackerdata is not None:\n",
+    "        savedata['Tracker Angle (degrees)'] = trackerdata\n",
     "\n",
     "    with open(savefile, 'w', newline='') as ict:\n",
     "        # Write the header lines, including the index variable for\n",
@@ -269,12 +270,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 118,
    "id": "4ee6f2c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data2 = data[filterdates].resample('60T', label='left', closed='left').mean().copy()\n"
+    "data2 = data[filterdates].resample('60T', label='left', closed='left').mean().copy()\n",
+    "data3 = data[filterdates].resample('60T', label='right', closed='right').mean().copy()\n"
    ]
   },
   {
@@ -801,9 +803,171 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3a15fc4",
+   "metadata": {},
+   "source": [
+    "## TMY3 FORMAT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c40faf15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "real_tmy=r'Other\\724010TYA.CSV'\n",
+    "real_tmy = pd.read_csv(real_tmy, skiprows = [0])\n",
+    "real_tmy = real_tmy.reset_index()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "a865c4a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'dates.strftime(\"%m/%d/%Y\")'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3621\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3620\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3621\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3622\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\_libs\\index.pyx:136\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\_libs\\index.pyx:163\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5198\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5206\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'dates.strftime(\"%m/%d/%Y\")'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [137]\u001b[0m, in \u001b[0;36m<cell line: 14>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m dates \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDatetimeIndex(data3[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m#data3['year'] = dates.year\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m#data3['year'] = data3['year'].apply(str)\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m#data3['month'] = dates.month\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m#data3['day'] = data3['day'].apply(str:2)\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m#data3['Date (MM/DD/YYYY)'] = data3['Date (MM/DD/YYYY)'].map(lambda x: str(x)[:-4])+data3.year\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m \u001b[43mdata3\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdates.strftime(\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m%\u001b[39;49m\u001b[38;5;124;43mm/\u001b[39;49m\u001b[38;5;132;43;01m%d\u001b[39;49;00m\u001b[38;5;124;43m/\u001b[39;49m\u001b[38;5;124;43m%\u001b[39;49m\u001b[38;5;124;43mY\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m)\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "File \u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:3505\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3503\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   3504\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3505\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3506\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3507\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3623\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3621\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3622\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m-> 3623\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3624\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3625\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3626\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3627\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3628\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'dates.strftime(\"%m/%d/%Y\")'"
+     ]
+    }
+   ],
+   "source": [
+    "data3 = data3[1:]  # removing the first 0 index\n",
+    "data3 = data3.reset_index()\n",
+    "data3['Date (MM/DD/YYYY)'] = real_tmy['Date (MM/DD/YYYY)']\n",
+    "data3['Time (HH:MM)'] = real_tmy['Time (HH:MM)']\n",
+    "#data3['Date (MM/DD/YYYY)']=data3['Date (MM/DD/YYYY)'].map(lambda x: str(x)[:-4]+dates.year)+'2021'\n",
+    "dates = pd.DatetimeIndex(data3['index'])\n",
+    "#data3['year'] = dates.year\n",
+    "#data3['year'] = data3['year'].apply(str)\n",
+    "#data3['month'] = dates.month\n",
+    "#data3['month'] = data3['month'].apply(str)\n",
+    "#data3['day'] = dates.day\n",
+    "#data3['day'] = data3['day'].apply(str:2)\n",
+    "#data3['Date (MM/DD/YYYY)'] = data3['Date (MM/DD/YYYY)'].map(lambda x: str(x)[:-4])+data3.year\n",
+    "#data3['Date (MM/DD/YYYY)'] = dates.strftime(\"%m/%d/%Y\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "2cc0f04d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data3['Date (MM/DD/YYYY)'] = dates.strftime(\"%m/%d/%Y\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "3ec824ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data3['month'] = dates.month\n",
+    "data3['month'] = data3['month'].apply(str)\n",
+    "data3['day'] = dates.day\n",
+    "data3['day'] = data3['day'].apply(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "53665ccc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       01/01/2021\n",
+       "1       01/01/2021\n",
+       "2       01/01/2021\n",
+       "3       01/01/2021\n",
+       "4       01/01/2021\n",
+       "           ...    \n",
+       "8755    12/31/2022\n",
+       "8756    12/31/2022\n",
+       "8757    12/31/2022\n",
+       "8758    12/31/2022\n",
+       "8759    12/31/2022\n",
+       "Name: Date (MM/DD/YYYY), Length: 8760, dtype: object"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data3['Date (MM/DD/YYYY)']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "71673ba4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['06/01/2021', '06/01/2021', '06/01/2021', '06/01/2021', '06/01/2021',\n",
+       "       '06/01/2021', '06/01/2021', '06/01/2021', '06/01/2021', '06/01/2021',\n",
+       "       ...\n",
+       "       '05/31/2022', '05/31/2022', '05/31/2022', '05/31/2022', '05/31/2022',\n",
+       "       '05/31/2022', '05/31/2022', '05/31/2022', '05/31/2022', '06/01/2022'],\n",
+       "      dtype='object', name='index', length=8760)"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dates.strftime(\"%m/%d/%Y\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "44cb75fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # 00a - Baseline\n",
+    "\n",
+    "save_TMY3( datecol=data3['Date (MM/DD/YYYY)'], timecol = data3['Time (HH:MM)'], \n",
+    "                    windspeed = data3.row7wind_speed, temp_amb = data3.temp_ambient_FieldAverage, \n",
+    "                    Albedo = data3.sunkitty_GRI_CM22, \n",
+    "                    DHI = data3.SRRL_DHI, DNI = data3.SRRL_DNI, GHI = data3.SRRL_GHI,\n",
+    "                    savefile='TMY3_00a.csv', trackerdata = None)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50705281",
+   "id": "e0b78441",
    "metadata": {},
    "outputs": [],
    "source": []
