update input file directory

--- a/bifacialVFPVLib/METHOD bifacialVF & PVlib.ipynb
+++ b/bifacialVFPVLib/METHOD bifacialVF & PVlib.ipynb
@@ -3,19 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3f2a7d6f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "InputFilesFolder = r'InputFiles'\n",
-    "ResultsFolder = r'TEMP'\n",
-    "exampleflag = False\n",
-    "debugflag = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "5c66ac28",
    "metadata": {},
    "outputs": [],
@@ -32,6 +19,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "f033cf91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_parent = os.path.dirname(os.getcwd())\n",
+    "InputFilesFolder = os.path.join(path_parent,'InputFiles')\n",
+    "ResultsFolder = r'TEMP'\n",
+    "exampleflag = False\n",
+    "debugflag = False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "ec809f5b",
    "metadata": {},
@@ -39,7 +40,7 @@
     {
      "data": {
       "text/plain": [
-       "'0.1.7-dev1+71.g202ed86.dirty'"
+       "'0.1.8.1'"
       ]
      },
      "execution_count": 3,
@@ -51,7 +52,7 @@
     "import bifacialvf\n",
     "\n",
     "# Print bifacialvf Version:\n",
-    "bifacialvf.__version__"
+    "bifacialvf.__version__\n"
    ]
   },
   {
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "469b89c1",
    "metadata": {},
    "outputs": [],
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b7cb65bd",
    "metadata": {},
    "outputs": [],
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d88bfb1a",
    "metadata": {},
    "outputs": [
@@ -129,7 +130,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating Sun position with a delta of -30 mins. i.e. 12 is 11:30 sunpos\n",
+      "Calculating Sun position with a delta of -30 mins. i.e. 12 is 11:30 sunpos\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                                                                | 10/8759 [00:00<01:36, 90.33it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Using albedo from TMY3 file.\n",
       "Note that at the moment, no validation check is done in the albedo data, so we assume it's correct and valid.\n",
       "\n",
@@ -153,7 +167,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 8759/8759 [00:59<00:00, 148.07it/s]"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 8759/8759 [02:05<00:00, 69.97it/s]"
      ]
     },
     {
@@ -199,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "0c8cd78d",
    "metadata": {},
    "outputs": [],
@@ -217,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "7b50334c",
    "metadata": {},
    "outputs": [],
@@ -243,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "0b4919ca",
    "metadata": {},
    "outputs": [],
@@ -263,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "0df561e8",
    "metadata": {},
    "outputs": [],
@@ -283,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "c9a35272",
    "metadata": {},
    "outputs": [],
@@ -331,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "bff408dd",
    "metadata": {},
    "outputs": [
@@ -339,9 +353,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sayala\\Anaconda3\\lib\\site-packages\\pvlib\\singlediode.py:613: RuntimeWarning: overflow encountered in exp\n",
-      "  np.exp((Rs[idx_p] * (IL[idx_p] + I0[idx_p]) + V[idx_p]) /\n",
-      "C:\\Users\\sayala\\Anaconda3\\lib\\site-packages\\pvlib\\singlediode.py:613: RuntimeWarning: overflow encountered in exp\n",
+      "C:\\Users\\cdeline\\Anaconda3\\lib\\site-packages\\pvlib\\singlediode.py:613: RuntimeWarning: overflow encountered in exp\n",
       "  np.exp((Rs[idx_p] * (IL[idx_p] + I0[idx_p]) + V[idx_p]) /\n"
      ]
     }
@@ -370,7 +382,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
