--- a/pySAM/METHOD pySAM Only.ipynb
+++ b/pySAM/METHOD pySAM Only.ipynb
@@ -29,23 +29,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "94ca714a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Resultsfolder = r'TEMP'\n",
-    "InputFiles = r'InputFiles'\n",
-    "exampleflag = False\n",
-    "debugflag = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "9ae8b95a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# PySAM downloaded by either `pip install nrel-pysam` or `conda install -c nrel nrel-pysam`\n",
     "import PySAM.Pvsamv1 as pv\n",
     "import PySAM\n",
     "import xlsxwriter\n",
@@ -59,6 +47,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "4141620d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Resultsfolder = r'TEMP'\n",
+    "path_parent = os.path.dirname(os.getcwd())\n",
+    "InputFiles = os.path.join(path_parent,'InputFiles')\n",
+    "exampleflag = False\n",
+    "debugflag = False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "42cd3c81",
    "metadata": {},
@@ -66,7 +68,7 @@
     {
      "data": {
       "text/plain": [
-       "'2.2.4'"
+       "'3.0.2'"
       ]
      },
      "execution_count": 3,
@@ -75,6 +77,7 @@
     }
    ],
    "source": [
+    "\n",
     "PySAM.__version__"
    ]
   },
@@ -96,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "2d969682",
    "metadata": {},
    "outputs": [],
    "source": [
     "sam1 = pv.default(\"FlatPlatePVCommercial\")\n",
-    "solar_resource_file = os.path.join(testfolder,'BEST_SAM_60_Comb_00a.csv')\n",
+    "solar_resource_file = os.path.join(InputFiles,'BEST_SAM_60_Comb_00a.csv')\n",
     "sam1.SolarResource.solar_resource_file = solar_resource_file"
    ]
   },
@@ -126,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "1b408dba",
    "metadata": {},
    "outputs": [],
@@ -145,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "706dcbfa",
    "metadata": {},
    "outputs": [],
@@ -178,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "baf1fd7b",
    "metadata": {},
    "outputs": [],
@@ -204,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "99d60505",
    "metadata": {},
    "outputs": [],
@@ -250,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "3d4782b4",
    "metadata": {},
    "outputs": [],
@@ -260,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "1fabfb65",
    "metadata": {},
    "outputs": [],
@@ -289,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "32b66a3f",
    "metadata": {},
    "outputs": [],
@@ -300,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "1c0f9f7f",
    "metadata": {},
    "outputs": [
@@ -311,7 +314,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [18]\u001b[0m, in \u001b[0;36m<cell line: 6>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     79\u001b[0m newval \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSystemDesign\u001b[39m\u001b[38;5;124m'\u001b[39m:{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msystem_capacity\u001b[39m\u001b[38;5;124m'\u001b[39m:system_capacity, \u001b[38;5;66;03m# VERY important value, only obtained by GUI.\u001b[39;00m\n\u001b[0;32m     80\u001b[0m                          \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msubarray1_gcr\u001b[39m\u001b[38;5;124m'\u001b[39m:subarray1_gcr}, \n\u001b[0;32m     81\u001b[0m           \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLayout\u001b[39m\u001b[38;5;124m'\u001b[39m:{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodule_aspect_ratio\u001b[39m\u001b[38;5;124m'\u001b[39m:module_aspect_ratio},\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    105\u001b[0m             }\n\u001b[0;32m    106\u001b[0m          }\n\u001b[0;32m    108\u001b[0m sam1\u001b[38;5;241m.\u001b[39massign(newval)\n\u001b[1;32m--> 110\u001b[0m \u001b[43msam1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    111\u001b[0m results \u001b[38;5;241m=\u001b[39m sam1\u001b[38;5;241m.\u001b[39mOutputs\u001b[38;5;241m.\u001b[39mexport()\n\u001b[0;32m    113\u001b[0m power \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(results[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msubarray1_dc_gross\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[1;32m<ipython-input-12-ae5fcd81de0f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     93\u001b[0m     \u001b[0msam1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0massign\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnewval\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     94\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 95\u001b[1;33m     \u001b[0msam1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     96\u001b[0m     \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msam1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mOutputs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexport\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     97\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mException\u001b[0m: pvsamv1 execution error.\n\texec fail(pvsamv1): Hour 0 occurs after 8759 on line 5136 of weather file. If this is subhourly data that was interpolated from hourly using the SAM Solar Resource Interpolation macro in SAM 2020.2.29 r3 or earlier, please run the macro again to correct the interpolation.\n\n"
      ]
     }
@@ -464,7 +467,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
