--- a/PVSyst/PVSyst Loading.ipynb
+++ b/PVSyst/PVSyst Loading.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "def definePVsystOutputDecoder():\n",
-    "    \n",
+    "\n",
     "    PVsystOutputDecoder = {'NormFac' : 'Normalised performance index (ref. to STC)',\n",
     "    'Yr' : 'Reference Incident Energy in coll. Plane',\n",
     "    'Ya' : 'Normalized Array Production',\n",
@@ -36,7 +36,7 @@
     "    'PR' : 'Performance Ratio',\n",
     "    'Effic' : 'Efficiencies',\n",
     "    'EffArrR' : 'Effic. Eout array / rough area',\n",
-    "    'EffArrC' : 'Effic. Eout arra / cells area',\n",
+    "    'EffArrC' : 'Effic. Eout array / cells area',\n",
     "    'EffSysR' : 'Effic. Eout system / rough area',\n",
     "    'EffSysC' : 'Effic Eout system / cells area',\n",
     "    'EffInvB' : 'Inverter effic., threshold loss included',\n",
@@ -161,29 +161,29 @@
     "    Reads a PVSYSt hourly output file, puts it in dataframe format and returns a \n",
     "    column header decoder to understand all the variables that name the columns.\n",
     "    Also returns any metadata included in the file.\n",
-    "    \n",
+    "\n",
     "    Input\n",
     "    -----\n",
     "    filename       PVsyst hourly simulation output file(.csv)\n",
-    "    \n",
+    "\n",
     "    Returns\n",
     "    -------\n",
     "    df             Dataframe with the hourly simulation results. Columns are named for each variable.\n",
     "    columnheaders  Decoder for the column header names, which are variables. This ties the available columns with the description of that variable.\n",
     "    metdata        metdata included in the pvsyst file.\n",
-    "    \n",
+    "\n",
     "    '''\n",
-    "    \n",
+    "\n",
     "    import pandas as pd\n",
     "    import csv\n",
-    "    \n",
+    "\n",
     "    f = open(filename)\n",
-    "    \n",
+    "\n",
     "    # Save metdata from file\n",
     "    metdata=[]\n",
     "    for i in range(10):  # skip the first 13 lines that are useless for the columns definition\n",
     "        metdata.append(f.readline())  # use the resulting string for metadata extraction\n",
-    "      \n",
+    "\n",
     "    headers = f.readline().split(\";\")\n",
     "    headers[-1] = headers[-1].strip()\n",
     "\n",
@@ -191,16 +191,16 @@
     "    units[-1] = units[-1].strip()\n",
     "\n",
     "    PVsystOutputDecoder = definePVsystOutputDecoder()\n",
-    "    \n",
+    "\n",
     "    # Creating a dictionary for headers, units and their definition\n",
     "    columnheaders = {}    \n",
     "    for i in range (1, len(headers)):\n",
     "        columnheaders[headers[i]] = {'Definition' : PVsystOutputDecoder[headers[i]],\n",
     "                     'Units': units[i]}\n",
-    "    \n",
+    "\n",
     "    df = pd.read_csv(f, sep=\";\", names=headers)   \n",
     "    df.index = pd.to_datetime(df['date'], dayfirst=True)\n",
-    "    \n",
+    "\n",
     "    return df, columnheaders, metdata"
    ]
   },
