remove NaNs in SAM input files, replace with zero

--- a/1 - Generating InputFile Combinations.ipynb
+++ b/1 - Generating InputFile Combinations.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "id": "f46b581b",
    "metadata": {},
    "outputs": [],
@@ -186,20 +186,20 @@
     "    \n",
     "        savedata['Minute'] = timestamps.minute\n",
     "\n",
-    "    savedata['Wspd'] = list(windspeed)\n",
-    "    savedata['Tdry'] = list(temp_amb)\n",
+    "    savedata['Wspd'] = list(windspeed.fillna(0))\n",
+    "    savedata['Tdry'] = list(temp_amb.fillna(20))\n",
     "    \n",
     "    if DHI is not None:\n",
-    "        savedata['DHI'] = list(DHI)\n",
+    "        savedata['DHI'] = list(DHI.fillna(0))\n",
     "    \n",
     "    if DNI is not None:\n",
-    "        savedata['DNI'] = list(DNI)\n",
+    "        savedata['DNI'] = list(DNI.fillna(0))\n",
     "                            \n",
     "    if GHI is not None:\n",
-    "        savedata['GHI'] = list(GHI)\n",
+    "        savedata['GHI'] = list(GHI.fillna(0))\n",
     "    \n",
     "    if POA is not None:\n",
-    "        savedata['POA'] = list(POA)\n",
+    "        savedata['POA'] = list(POA.fillna(0))\n",
     "        \n",
     "    if Albedo is not None:\n",
     "        if type(Albedo) == pd.Series:\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "id": "91db6b25",
    "metadata": {},
    "outputs": [],
