Organized Weather Files and pySAM simulations

--- a/SAM/Method pySAM SAM.ipynb
+++ b/SAM/Method pySAM SAM.ipynb
@@ -15,13 +15,13 @@
     "import json\n",
     "import os\n",
     "\n",
-    "sam_input_folder = 'Row2Json'"
+    "sam_input_folder = 'Row2Json'\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1257afdb",
+   "id": "6a8b3959",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,26 +36,26 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6a8b3959",
+   "id": "f36cf60f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Pvsamv1 object at 0x0000023EE2113300> subarray1_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000023EE2113300> subarray1_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000023EE2113300> subarray2_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000023EE2113300> subarray2_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000023EE2113300> subarray3_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000023EE2113300> subarray3_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000023EE2113300> subarray4_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000023EE2113300> subarray4_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000023EE2113300> ur_enable_billing_demand 0\n",
-      "<Pvsamv1 object at 0x0000023EE2113300> ur_billing_demand_minimum 100\n",
-      "<Pvsamv1 object at 0x0000023EE2113300> ur_billing_demand_lookback_period 11\n",
-      "<Pvsamv1 object at 0x0000023EE2113300> ur_billing_demand_lookback_percentages [[60, 0], [60, 0], [60, 0], [60, 0], [60, 0], [95, 1], [95, 1], [95, 1], [95, 1], [60, 0], [60, 0], [60, 0]]\n",
-      "<Pvsamv1 object at 0x0000023EE2113300> ur_dc_billing_demand_periods [[1, 1], [2, 1]]\n"
+      "<Pvsamv1 object at 0x000002125C33B990> subarray1_slope_tilt 0\n",
+      "<Pvsamv1 object at 0x000002125C33B990> subarray1_slope_azm 0\n",
+      "<Pvsamv1 object at 0x000002125C33B990> subarray2_slope_tilt 0\n",
+      "<Pvsamv1 object at 0x000002125C33B990> subarray2_slope_azm 0\n",
+      "<Pvsamv1 object at 0x000002125C33B990> subarray3_slope_tilt 0\n",
+      "<Pvsamv1 object at 0x000002125C33B990> subarray3_slope_azm 0\n",
+      "<Pvsamv1 object at 0x000002125C33B990> subarray4_slope_tilt 0\n",
+      "<Pvsamv1 object at 0x000002125C33B990> subarray4_slope_azm 0\n",
+      "<Pvsamv1 object at 0x000002125C33B990> ur_enable_billing_demand 0\n",
+      "<Pvsamv1 object at 0x000002125C33B990> ur_billing_demand_minimum 100\n",
+      "<Pvsamv1 object at 0x000002125C33B990> ur_billing_demand_lookback_period 11\n",
+      "<Pvsamv1 object at 0x000002125C33B990> ur_billing_demand_lookback_percentages [[60, 0], [60, 0], [60, 0], [60, 0], [60, 0], [95, 1], [95, 1], [95, 1], [95, 1], [60, 0], [60, 0], [60, 0]]\n",
+      "<Pvsamv1 object at 0x000002125C33B990> ur_dc_billing_demand_periods [[1, 1], [2, 1]]\n"
      ]
     }
    ],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "16d61d45",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "7118ab79",
    "metadata": {},
    "outputs": [
@@ -258,19 +258,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Pvsamv1 object at 0x0000023EEB5D2C00> subarray1_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000023EEB5D2C00> subarray1_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000023EEB5D2C00> subarray2_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000023EEB5D2C00> subarray2_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000023EEB5D2C00> subarray3_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000023EEB5D2C00> subarray3_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000023EEB5D2C00> subarray4_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000023EEB5D2C00> subarray4_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000023EEB5D2C00> ur_enable_billing_demand 0\n",
-      "<Pvsamv1 object at 0x0000023EEB5D2C00> ur_billing_demand_minimum 100\n",
-      "<Pvsamv1 object at 0x0000023EEB5D2C00> ur_billing_demand_lookback_period 11\n",
-      "<Pvsamv1 object at 0x0000023EEB5D2C00> ur_billing_demand_lookback_percentages [[60, 0], [60, 0], [60, 0], [60, 0], [60, 0], [95, 1], [95, 1], [95, 1], [95, 1], [60, 0], [60, 0], [60, 0]]\n",
-      "<Pvsamv1 object at 0x0000023EEB5D2C00> ur_dc_billing_demand_periods [[1, 1], [2, 1]]\n"
+      "<Pvsamv1 object at 0x000002127F4BE0F0> subarray1_slope_tilt 0\n",
+      "<Pvsamv1 object at 0x000002127F4BE0F0> subarray1_slope_azm 0\n",
+      "<Pvsamv1 object at 0x000002127F4BE0F0> subarray2_slope_tilt 0\n",
+      "<Pvsamv1 object at 0x000002127F4BE0F0> subarray2_slope_azm 0\n",
+      "<Pvsamv1 object at 0x000002127F4BE0F0> subarray3_slope_tilt 0\n",
+      "<Pvsamv1 object at 0x000002127F4BE0F0> subarray3_slope_azm 0\n",
+      "<Pvsamv1 object at 0x000002127F4BE0F0> subarray4_slope_tilt 0\n",
+      "<Pvsamv1 object at 0x000002127F4BE0F0> subarray4_slope_azm 0\n",
+      "<Pvsamv1 object at 0x000002127F4BE0F0> ur_enable_billing_demand 0\n",
+      "<Pvsamv1 object at 0x000002127F4BE0F0> ur_billing_demand_minimum 100\n",
+      "<Pvsamv1 object at 0x000002127F4BE0F0> ur_billing_demand_lookback_period 11\n",
+      "<Pvsamv1 object at 0x000002127F4BE0F0> ur_billing_demand_lookback_percentages [[60, 0], [60, 0], [60, 0], [60, 0], [60, 0], [95, 1], [95, 1], [95, 1], [95, 1], [60, 0], [60, 0], [60, 0]]\n",
+      "<Pvsamv1 object at 0x000002127F4BE0F0> ur_dc_billing_demand_periods [[1, 1], [2, 1]]\n"
      ]
     }
    ],
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "bb5d25a6",
    "metadata": {},
    "outputs": [
@@ -497,7 +497,7 @@
        "[8760 rows x 6 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,12 +507,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f9346a4",
+   "cell_type": "markdown",
+   "id": "f4a8225c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Variables to explore SAM models\n",
+    "\n",
+    "* sky_model = 0 for Isotropic, 1 for HDKR, 2 for Perez\n",
+    "* irrad_mod = 0 DNI + GHI, 1 DNI + GHI, 2 GHI + DHI, 3 POA Ref cell, 4 POA pyr\n",
+    "\n",
+    "use_wf_albedo\n",
+    "use_spatial_albedos"
+   ]
   }
  ],
  "metadata": {
