Incorporate Silvana's pySAM updates

--- a/pySAM/METHOD pySAM Only.ipynb
+++ b/pySAM/METHOD pySAM Only.ipynb
@@ -304,21 +304,151 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "4b8bda19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2-Bifi: Prism \n",
+    "modfilter = df.index.str.startswith('Prism') & df.index.str.contains('457BSTC')\n",
+    "system_capacity =  72.04280090332031   # VERY important value, only obtained by GUI.\n",
+    "cec_is_bifacial = 1\n",
+    "cec_bifaciality = 0.694 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3085d924",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#solar_resource_file = os.path.join(InputFiles,solarresource)\n",
+    "sam1.SolarResource.solar_resource_file = solar_resource_file\n",
+    "\n",
+    "mymod = df[modfilter]\n",
+    "\n",
+    "cec_a_ref = float(mymod.a_ref[0])\n",
+    "cec_adjust = float(mymod.Adjust[0]) \n",
+    "cec_alpha_sc = float(mymod.alpha_sc[0]) \n",
+    "cec_area = float(mymod.A_c[0]) \n",
+    "\n",
+    "cec_beta_oc = float(mymod.beta_oc[0]) \n",
+    "cec_gamma_r = float(mymod.gamma_r[0]) \n",
+    "cec_i_l_ref = float(mymod.I_L_ref[0])\n",
+    "cec_i_mp_ref = float(mymod.I_mp_ref[0]) \n",
+    "cec_i_o_ref = float(mymod.I_o_ref[0]) \n",
+    "cec_i_sc_ref = float(mymod.I_sc_ref[0]) \n",
+    "#cec_is_bifacial = int(mymod.Bifacial[0]) # Assigning manually from the if statements above\n",
+    "if np.isnan(float(mymod.Length[0])): # Adjusting size of module to standard size if not in catalogue\n",
+    "    cec_module_length = 2.0\n",
+    "else:\n",
+    "    cec_module_length = float(mymod.Length[0]) \n",
+    "if np.isnan(float(mymod.Width[0])):\n",
+    "    cec_module_width = 1.0\n",
+    "else: \n",
+    "    cec_module_width = float(mymod.Width[0]) \n",
+    "module_aspect_ratio = cec_module_length/cec_module_width    # Adjusting module aspect ratio\n",
+    "\n",
+    "cec_n_s = float(mymod.N_s[0]) \n",
+    "cec_r_s = float(mymod.R_s[0]) \n",
+    "cec_r_sh_ref = float(mymod.R_sh_ref[0])\n",
+    "cec_t_noct = float(mymod.T_NOCT[0]) \n",
+    "cec_v_mp_ref = float(mymod.V_mp_ref[0]) \n",
+    "cec_v_oc_ref = float(mymod.V_oc_ref[0]) \n",
+    "\n",
+    "subarray1_gcr = cec_module_length/pitch        # Adjusting the gcr slightly for the module length.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "92c6f662",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newval = {'SystemDesign':{'system_capacity':system_capacity, # VERY important value, only obtained by GUI.\n",
+    "                         'subarray1_gcr':subarray1_gcr}, \n",
+    "          'Layout':{'module_aspect_ratio':module_aspect_ratio},\n",
+    "            'CECPerformanceModelWithModuleDatabase': {\n",
+    "                'cec_a_ref': cec_a_ref,\n",
+    "                'cec_adjust': cec_adjust,\n",
+    "                'cec_alpha_sc': cec_alpha_sc,\n",
+    "                'cec_area': cec_area,\n",
+    "                'cec_beta_oc': cec_beta_oc,\n",
+    "                'cec_gamma_r': cec_gamma_r,\n",
+    "                'cec_i_l_ref': cec_i_l_ref,\n",
+    "                'cec_i_mp_ref': cec_i_mp_ref,\n",
+    "                'cec_i_o_ref': cec_i_o_ref,\n",
+    "                'cec_i_sc_ref': cec_i_sc_ref,\n",
+    "                'cec_is_bifacial': cec_is_bifacial,\n",
+    "                'cec_module_length': cec_module_length,\n",
+    "                'cec_module_width': cec_module_width,\n",
+    "                'cec_n_s': cec_n_s,\n",
+    "                'cec_r_s': cec_r_s,\n",
+    "                'cec_r_sh_ref': cec_r_sh_ref,\n",
+    "                'cec_t_noct': cec_t_noct,\n",
+    "                'cec_v_mp_ref': cec_v_mp_ref,\n",
+    "                'cec_v_oc_ref': cec_v_oc_ref,\n",
+    "                'cec_bifacial_ground_clearance_height': cec_bifacial_ground_clearance_height,\n",
+    "                'cec_bifacial_transmission_factor': cec_bifacial_transmission_factor,\n",
+    "                'cec_bifaciality': cec_bifaciality\n",
+    "            }\n",
+    "         }\n",
+    "\n",
+    "sam1.assign(newval)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8ed585b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sam1.execute()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77b714ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = sam1.Outputs.export()\n",
+    "\n",
+    "\n",
+    "power = list(results['subarray1_dc_gross'])\n",
+    "celltemp = list(results['subarray1_celltemp'])\n",
+    "\n",
+    "# Saving select columns of results as needed\n",
+    "if ii == 0:\n",
+    "    dni = list(results['dn'])\n",
+    "    dhi = list(results['df'])\n",
+    "    alb = list(results['alb'])\n",
+    "    rear = list(results['subarray1_poa_rear'])\n",
+    "    front = list(results['subarray1_poa_front'])\n",
+    "    poa= list(results['subarray1_poa_eff'])\n",
+    "    res = pd.DataFrame(list(zip(power, celltemp, dni, dhi, alb, rear, front, poa)),\n",
+    "               columns =['row'+str(ii)+'_DCP', 'row'+str(ii)+'_Celltemp', 'DNI','DHI','alb','Grear','Gfront','POA'])\n",
+    "else:\n",
+    "    res = pd.DataFrame(list(zip(power, celltemp)),\n",
+    "               columns =['row'+str(ii)+'_DCP', 'row'+str(ii)+'_Celltemp'])\n",
+    "\n",
+    "res['row'+str(ii)+'_DCP']= res['row'+str(ii)+'_DCP']/system_capacity # normalizing by the system_capacity\n",
+    "res = res[0:8760]\n",
+    "#res.index = timestamps\n",
+    "\n",
+    "dfAll = pd.concat([dfAll, res], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1c0f9f7f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "Exception",
-     "evalue": "pvsamv1 execution error.\n\texec fail(pvsamv1): Hour 0 occurs after 8759 on line 5136 of weather file. If this is subhourly data that was interpolated from hourly using the SAM Solar Resource Interpolation macro in SAM 2020.2.29 r3 or earlier, please run the macro again to correct the interpolation.\n\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-ae5fcd81de0f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     93\u001b[0m     \u001b[0msam1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0massign\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnewval\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     94\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 95\u001b[1;33m     \u001b[0msam1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     96\u001b[0m     \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msam1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mOutputs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexport\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     97\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mException\u001b[0m: pvsamv1 execution error.\n\texec fail(pvsamv1): Hour 0 occurs after 8759 on line 5136 of weather file. If this is subhourly data that was interpolated from hourly using the SAM Solar Resource Interpolation macro in SAM 2020.2.29 r3 or earlier, please run the macro again to correct the interpolation.\n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#timestamps = pd.to_datetime(weatherfile[['Year','Month','Day','Hour']])\n",
     "\n",
